# server.js
@@ -1,57 +1,56 @@
+
+require('dotenv').config();
 const express = require('express');
 const bodyParser = require('body-parser');
 const session = require('express-session');
-const passport = require('passport');
-const GitHubStrategy = require('passport-github').Strategy;
-const mongodb = require('./db/connect');
+const cors = require('cors');
+const swaggerUI = require('swagger-ui-express');
+const swaggerDoc = require('./swagger.json');
+const mongodb = require('./config/db/connect');
+const { connect } = require('mongoose');
 
-const oauthRoutes = require('./routes/oauth');
+
 
 const port = process.env.PORT || 8080;
 const server = express();
 
 server
   .use(bodyParser.json())
+  .use(cors())
+  .use('/api-docs', swaggerUI.serve, swaggerUI.setup(swaggerDoc))
   .use(session({ secret: process.env.SESSION_SECRET, resave: true, saveUninitialized: true }))
-  .use(passport.initialize())
-  .use(passport.session())
-  .use((req, res, next) => {
+  .use(express.json())
+  .use(express.urlencoded({ extended: true }));
+
+  server.use((req, res, next) => {
     res.setHeader('Access-Control-Allow-Origin', '*');
+    res.setHeader(
+      'Access-Control-Allow-Headers',
+      'Origin, X-Requested-With, Content-Type, Accept, Z-Key'
+    );
+    res.setHeader('Content-Type', 'application/json');
+    res.setHeader('Access-Control-Allow-Methods', 'GET, POST, PUT, DELETE, FETCH');
     next();
   });
 
-passport.serializeUser((user, done) => {
-  done(null, user);
+
+  server.use('/', require('./routes'));
+
+
+
+// server.use('/chef', require('./routes/chefs'));
+// server.use('/index', require('./routes/index'));
+// server.use('/recipes', require('./routes/recipes'));
+// server.use('/swagger', require('./routes/swagger'));
+
+server.use((err, req, res, next) => {
+  console.error(err);
+  res.status(500).json({ error: 'Internal Server Error' });
 });
 
-passport.deserializeUser((obj, done) => {
-  done(null, obj);
-});
 
-passport.use(
-  new GitHubStrategy(
-    {
-      clientID: process.env.GITHUB_CLIENT_ID,
-      clientSecret: process.env.GITHUB_CLIENT_SECRET,
-      callbackURL: 'https://cse341-personal-project-jjxi.onrender.com/auth/login'
-    },
-    (accessToken, refreshToken, profile, done) => {
-      return done(null, profile);
-    }
-  )
-);
-server.use('/auth', oauthRoutes);
-server.use('/chef', require('./routes/chefs'));
-server.use('/index', require('./routes/index'));
-server.use('/recipes', require('./routes/recipes'));
-server.use('/swagger', require('./routes/swagger'));
+mongodb();
 
-mongodb.initDb((err) => {
-  if (err) {
-    console.error(err);
-  } else {
-    server.listen(port, () => {
-      console.log(`Connected to DB and listening on ${port}`);
-    });
-  }
-});
+
+server.listen(port);
+module.exports = server;
